--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">GarminLogging</string>
-    <string name="element_text">hello</string>
+    <string name="element_text">A long string to represent a log message</string>
     <string name="clear">clear</string>
 </resources>
